examples/test/testpolicy14222.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14222
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key16: value1
      key15: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value15
          key12: value5
          key24: value12
      podSelector:
        matchLabels:
          key33: value30
